data/derived/sp14/progs/unify/prog4226.ml.out
Characters 43-54:
  app digitsOfInt n/10 [n mod 10] 
      ^^^^^^^^^^^
Error: This expression has type int -> 'a
       but an expression was expected of type 'b list
